--- a/Front/src/app/shared/navbar/navbar.component.html
+++ b/Front/src/app/shared/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <!-- Navbar -->
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
+<nav  class="navbar controlFixed navbar-expand-lg navbar-dark scrolling-navbar">
   <div class="container">
 
     <!-- Brand -->
@@ -21,23 +21,23 @@
       <!-- Left -->
       <ul class="navbar-nav mr-auto" >
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" routerLink="/landing/personal" >Personales
+          <a class="nav-link" routerLink="/landing/personal" data-toggle="collapse" data-target="#navbarSupportedContent">Personales
           </a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" routerLink="/landing/hipoteca" >Sobre Hipoteca</a>
+          <a class="nav-link" routerLink="/landing/hipoteca" data-toggle="collapse" data-target="#navbarSupportedContent">Sobre Hipoteca</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" routerLink="/landing/vehiculo" >Sobre Vehiculo</a>
+          <a class="nav-link" routerLink="/landing/vehiculo" data-toggle="collapse" data-target="#navbarSupportedContent">Sobre Vehiculo</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" routerLink="/landing/construccion" >Para Construccion</a>
+          <a class="nav-link" routerLink="/landing/construccion" data-toggle="collapse" data-target="#navbarSupportedContent">Para Construccion</a>
         </li>
 
       </ul>
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/landing/invierte" ><strong>QUIERES INVIERTIR?</strong></a>
+          <a class="nav-link" routerLink="/landing/invierte" data-toggle="collapse" data-target="#navbarSupportedContent"><strong>QUIERES INVIERTIR?</strong></a>
         </li>
       </ul>
       <!-- Right -->
