--- a/Front/src/app/dashboard/dashboard.component.html
+++ b/Front/src/app/dashboard/dashboard.component.html
@@ -100,7 +100,9 @@
             </mat-nav-list>
         </mat-sidenav>
         <mat-sidenav-content>
-            <router-outlet></router-outlet>
+
+            <router-outlet #child></router-outlet>
+
             <app-footer></app-footer>
         </mat-sidenav-content>
     </mat-sidenav-container>
