--- a/Front/src/app/dashboard/datosinmueble/datosinmueble.component.html
+++ b/Front/src/app/dashboard/datosinmueble/datosinmueble.component.html
@@ -43,7 +43,7 @@
 
               <!-- Matricula Inmobiliaria -->
               <mat-form-field class="form-group col-md-6 pl-1">
-                <mat-label># De Matricula Inmobiliaria</mat-label>
+                <mat-label>Matricula Inmobiliaria Ej:50C-012345</mat-label>
                 <input matInput formControlName="matricula" type="text"
                   class="form-control" >
                 <mat-error *ngIf="campoEsValido('matricula')">
@@ -98,7 +98,7 @@
               <mat-form-field class="form-group col-md-4">
                 <mat-label>Ciudad</mat-label>
                 <input matInput formControlName="ciudad" type="text"
-                  class="form-control">
+                  class="form-control" >
                 <mat-error *ngIf="campoEsValido('ciudad')">
                   {{getError('ciudad')}}
                 </mat-error>
