--- a/Front/src/app/dashboard/datospersonales/datospersonales.component.html
+++ b/Front/src/app/dashboard/datospersonales/datospersonales.component.html
@@ -131,7 +131,7 @@
 
               <!-- Celular -->
               <mat-form-field class="form-group col-md-6">
-                <mat-label>Celular</mat-label>
+                <mat-label>Celular  <small>(10-Digitos)</small></mat-label>
                 <input matInput formControlName="celular1" type="number"
                   class="form-control">
                 <mat-error *ngIf="campoEsValido('celular1')">
