--- a/Front/src/app/dashboard/datosreferenciacom/datosreferenciacom.component.html
+++ b/Front/src/app/dashboard/datosreferenciacom/datosreferenciacom.component.html
@@ -61,7 +61,7 @@
 
                 <!-- Celular1 -->
                 <mat-form-field class="form-group col-md-6 pl-1">
-                  <mat-label>Celular</mat-label>
+                  <mat-label>Celular o Telefono</mat-label>
                   <input matInput formControlName="celular1" type="number"
                     class="form-control">
                   <mat-error *ngIf="campoEsValido('celular1')">
@@ -115,7 +115,7 @@
 
                 <!-- Celular2 -->
                 <mat-form-field class="form-group col-md-6 pl-1">
-                  <mat-label>Celular</mat-label>
+                  <mat-label>Celular o Telefono</mat-label>
                   <input matInput formControlName="celular2" type="number"
                     class="form-control">
                   <mat-error *ngIf="campoEsValido('celular2')">
@@ -169,7 +169,7 @@
 
                 <!-- Celular3 -->
                 <mat-form-field class="form-group col-md-6 pl-1">
-                  <mat-label>Celular</mat-label>
+                  <mat-label>Celular o Telefono</mat-label>
                   <input matInput formControlName="celular3" type="number"
                     class="form-control">
                   <mat-error *ngIf="campoEsValido('celular3')">
