--- a/Front/src/app/dashboard/datostrabajo/datostrabajo.component.html
+++ b/Front/src/app/dashboard/datostrabajo/datostrabajo.component.html
@@ -82,7 +82,7 @@
 
               <!-- Telefono -->
               <mat-form-field class="form-group col-md-4 pl-1">
-                <mat-label>Telefono</mat-label>
+                <mat-label>Celular o Telefono</mat-label>
                 <input matInput formControlName="telefono" type="number"
                   class="form-control">
                 <mat-error *ngIf="campoEsValidoEmpleado('telefono')">
@@ -175,7 +175,7 @@
 
               <!-- Telefono -->
               <mat-form-field class="form-group col-md-6 pl-1">
-                <mat-label>Telefono</mat-label>
+                <mat-label>Celular o Telefono</mat-label>
                 <input matInput formControlName="telefono" type="number"
                   class="form-control">
                 <mat-error *ngIf="campoEsValidoIndependiente('telefono')">
@@ -278,7 +278,7 @@
 
                   <!-- Telefono De La Empresa -->
                   <mat-form-field class="form-group col-md-6 pl-1">
-                    <mat-label>Telefono</mat-label>
+                    <mat-label>Celular o Telefono</mat-label>
                     <input matInput formControlName="telefonoEmpresa" type="number"
                       class="form-control">
                     <mat-error *ngIf="campoEsValidoEmpresa('telefonoEmpresa')">
