--- a/Front/src/app/shared/card/card.component.html
+++ b/Front/src/app/shared/card/card.component.html
@@ -5,37 +5,45 @@
             <div class="card-body ">
 
               <!-- Form -->
-              <form name="">
+              <form autocomplete="off" [formGroup]="miFormulario"
+                (ngSubmit)="guardar()">
                 <!-- Heading -->
                 <h3 class="text-light text-center">
                   <strong>Escribenos:</strong>
                 </h3>
                 <hr>
 
+
                 <div class="md-form ">
                   <i class="fas fa-user prefix grey-text"></i>
-                  <input type="text" id="form3" class="form-control">
+                  <input formControlName="nombre" type="text" id="form3" class="form-control text-white">
                   <label for="form3">Su nombre</label>
                 </div>
                 <div class="md-form">
                   <i class="fas fa-envelope prefix grey-text"></i>
-                  <input type="text" id="form2" class="form-control">
+                  <input formControlName="email" type="text" id="form2" class="form-control text-white">
                   <label for="form2">Su email</label>
+                </div>
+                <div class="md-form">
+                  <i class="fas fa-envelope prefix grey-text"></i>
+                  <input formControlName="celular" type="text" maxlength="10" id="form2" class="form-control text-white">
+                  <label for="form2">Su Celular</label>
                 </div>
 
                 <div class="md-form">
                   <i class="fas fa-pencil-alt prefix grey-text"></i>
-                  <textarea type="text" id="form8" class="md-textarea "></textarea>
+                  <textarea formControlName="mensaje" type="text" id="form8" class="md-textarea text-white"></textarea>
                   <label for="form8">Su mensaje</label>
                 </div>
 
                 <div class="text-center">
-                  <button class="btn btn-indigo">Enviar</button>
-                  <hr>
-                  <fieldset class="form-check">
+                  <!-- <fieldset class="form-check">
                     <input type="checkbox" class="form-check-input" id="checkbox1">
                     <label for="checkbox1" class="form-check-label dark-grey-text">Acepto Terminos Y Condiciones</label>
-                  </fieldset>
+                  </fieldset> -->
+                  <button class="btn btn-indigo" [disabled]="miFormulario.invalid">Enviar</button>
+                  <hr>
+
                 </div>
 
               </form>
@@ -45,3 +53,10 @@
 
           </div>
           <!--/.Card-->
+<!-- <span>Valid</span>
+<pre>{{ miFormulario.valid }}</pre>
+<br>
+
+<span>Value</span>
+<pre>{{ miFormulario.value | json }}</pre>
+<br> -->
