--- a/Front/src/app/shared/navbar/navbar.component.html
+++ b/Front/src/app/shared/navbar/navbar.component.html
@@ -48,13 +48,13 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="https://twitter.com/lendiup" class="nav-link" target="_blank">
+          <a href="https://twitter.com/lendiup" class="nav-link" target="_blank" >
             <i class="fab fa-twitter"></i>
           </a>
         </li>
         <li class="nav-item">
           <a (click)="dataService.viewLogin()"
-            class="nav-link border border-light rounded" target="_blank">
+            class="nav-link border border-light rounded" target="_blank" data-toggle="collapse" data-target="#navbarSupportedContent">
             <i class="fas fa-sign-in-alt"></i>INGRESAR
           </a>
         </li>
